--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,21 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(blockchain)
+project(node)
+
+add_compile_definitions(BOOST_LOG_DYN_LINK)
 
 set(CMAKE_CXX_STANDARD 17)
 
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 find_package(OpenSSL REQUIRED)
-find_package(Boost COMPONENTS program_options REQUIRED )
+find_package(Boost COMPONENTS program_options log log_setup REQUIRED )
 include_directories( ${Boost_INCLUDE_DIR} )
 
+set(SOURCE_FILES main.cpp loader.cpp block.cpp transaction.cpp)
+
 # add the executable
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} LINK_PUBLIC OpenSSL::Crypto)
 target_link_libraries(${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} )
