fix compiling errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
+set(CMAKE_BUILD_TYPE Debug)
+SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-rdynamic")
 
 # set the project name
 project(node)
@@ -13,13 +15,14 @@ find_package(Boost COMPONENTS program_options log log_setup REQUIRED )
 include_directories( ${Boost_INCLUDE_DIR} )
 include_directories( "crypto")
 
-set(SOURCE_FILES main.cpp loader.cpp block.cpp transaction.cpp chain.cpp blockchain.cpp peer.cpp peer_session.cpp message.cpp)
+set(SOURCE_FILES main.cpp loader.cpp block.cpp transaction.cpp chain.cpp blockchain.cpp peer.cpp peer_session.cpp message.cpp miner.cpp message_queue.cpp hash.cpp ecdsa.cpp)
 
 # add the executable
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} LINK_PUBLIC OpenSSL::Crypto)
 target_link_libraries(${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES} )
+target_link_libraries(${PROJECT_NAME} LINK_PUBLIC dl )
 
 
 # add the executable
