--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(Boost COMPONENTS program_options log log_setup REQUIRED )
 include_directories( ${Boost_INCLUDE_DIR} )
 include_directories( "crypto")
 
-set(SOURCE_FILES main.cpp loader.cpp block.cpp transaction.cpp chain.cpp blockchain.cpp peer.cpp peer_session.cpp message.cpp miner.cpp message_queue.cpp hash.cpp ecdsa.cpp)
+set(SOURCE_FILES main.cpp loader.cpp block.cpp transaction.cpp chain.cpp blockchain.cpp server.cpp connection.cpp message.cpp miner.cpp message_queue.cpp hash.cpp ecdsa.cpp)
 
 # add the executable
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
